# clickup-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  fastmcp.json  package-lock.json  package.json  pyproject.toml  repro-init.ts  repro.ts  server.py  test-server.ts  tool_manifest_clickup.json
docs/: 01_product_brief_and_goals.md  03_operational_and_safety_constraints.md  04_codebase_architecture_and_house_style.md  05_resource_taxonomy.md  CONFIGURATION.md  configuration.md  tool-reference.md
scripts/: copy-assets.js  run_server.py  test-allowlist.js
src/: worker.ts
src/application/security/: EncryptionService.ts  masterKey.ts
src/application/security/__tests__/: EncryptionService.test.ts
src/cli/: index.ts
src/infrastructure/db/: index.ts  schema.sql
src/infrastructure/logging/: logger.ts
src/infrastructure/metrics/: metrics.ts
src/infrastructure/repositories/: ApiKeyRepository.ts  UserConfigRepository.ts
src/mcp/: annotations.ts  registerTools.ts
src/public/: app.js  authorize.html  connect.html  connect.js  index.html  premium.css
src/server/: authRouter.ts  authentication.ts  config.ts  cors.ts  health.ts  httpTransport.ts  index.ts  oauthDiscovery.ts  services.ts  sessionConfig.ts
src/server/__tests__/: auth_flow.test.ts  authentication.test.ts  httpTransport.test.ts
src/server/api/: apiKeyRouter.ts  router.ts
src/server/middleware/: apiKeyAuth.ts  errorHandler.ts  requestLogger.ts
src/server/schemas/: clickup.ts  index.ts
verification/: user-bound-api-key-smoke-test.ps1
(+3 files in other folders)
